--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </ul>
             <div class="nav-actions">
                 <button class="signin-btn">Sign-in</button>
+                <button id="my-jobs-btn" class="my-jobs-btn">My Jobs</button>
                 <button id="post-job-btn" class="post-job-nav-btn">+ Post a Job</button>
                 <div id="connection-status" class="status-badge online">Online</div>
             </div>
@@ -125,6 +126,17 @@
                     <div class="spinner"></div>
                     <p>Loading jobs...</p>
                 </div>
+            </div>
+        </section>
+
+        <!-- My Jobs Section -->
+        <section id="my-jobs-section" class="hidden">
+            <div class="section-header">
+                <h2>My Posted Jobs</h2>
+                <button id="back-to-jobs-btn" class="back-btn">← Back to All Jobs</button>
+            </div>
+            <div id="my-jobs-list" class="job-grid">
+                <!-- Posted jobs will be injected here -->
             </div>
         </section>
     </main>
